fix styling issue with order ticket overflowing

--- a/client/frontend/sale.css
+++ b/client/frontend/sale.css
@@ -54,8 +54,7 @@
 
 #order-table {
     width: 100%;
-    max-height: 45vh;
-    min-height: 45vh;
+    min-height: 65%;
 }
 
 #order-table tr {
